<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bottom_nav_back">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <View
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/top_handle"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_sans_bold"
                android:textSize="18sp"
                android:layout_marginTop="25dp"
                android:textStyle="bold"
                android:layout_marginHorizontal="20dp"
                android:textColor="#000"
                android:text="@string/add_new_sof" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:hint="@string/enter_vessel_name"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_sans"
                android:lineSpacingExtra="5.3sp"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:hint="@string/port_name"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_sans"
                android:lineSpacingExtra="5.3sp"
                />


            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:hint="@string/owner"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="25dp"
                android:fontFamily="@font/nunito_sans"
                android:lineSpacingExtra="5.3sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:text="@string/vessel_birth"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:lineSpacingExtra="5.3sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:text="@string/cargo"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:lineSpacingExtra="5.3sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/round_corners"
                android:text="@string/birth"
                android:padding="20dp"
                android:textSize="15sp"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp"
                android:fontFamily="@font/nunito_sans"
                android:drawableEnd="@drawable/ic_down_arrow"
                android:lineSpacingExtra="5.3sp"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/blue_filled_back"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:elevation="3dp"
                android:padding="16dp"
                android:id="@+id/create_sof">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/create_sof"
                    android:textColor="#fff"
                    android:fontFamily="@font/nunito_sans"
                    android:textSize="20sp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
