<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:background="@drawable/logo"
    tools:context=".fragments.Welcome">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_margin="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:elevation="5dp"
            android:src="@drawable/ic_logo"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            />


    </RelativeLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:padding="25dp"
        android:elevation="3dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/round_back"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sacramento"
            android:text="@string/good_afternoon"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_bold"
            android:text="@string/welcome_back"
            android:textColor="#000"
            android:textSize="25sp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nunito_sans_light"
            android:text="@string/sign_in_to_your_account_and_you_can_ship_all_your_couriers"
            android:textColor="#000"
            android:layout_marginTop="5dp"
            android:textSize="18sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_filled_back"
            android:layout_marginTop="25dp"
            android:elevation="3dp"
            android:padding="16dp"
            android:id="@+id/login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login"
                android:textColor="#fff"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/blue_hollow"
            android:layout_marginTop="25dp"
            android:elevation="3dp"
            android:padding="16dp"
            android:id="@+id/signup">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/nunito_sans"
                android:textSize="20sp" />

        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>